--- a/assets/styles/auth.css
+++ b/assets/styles/auth.css
@@ -8,7 +8,7 @@
 
 
 body {
-    background: url("../assets/moviebackground.jpg");
+    background: url("../imgs/moviebackground.jpg");
     /* background-image: url('moviebackground.jpg'); no-repeat center center/cover*/
     height: 100vh;
     display: flex;
